--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "ValimGustavo <gustavo.souza.valim@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "bin": {
+    "run": "./bin/run.js"
+  }
 }
